--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,1 +1,9 @@
 <h1>My Movies List</h1>
+
+<%= link_to 'Create a movie list', new_list_path, class: 'btn btn-flat' %>
+
+<% @lists.each do |list| %>
+<%= link_to list_path(list) do %>
+  <%= list.name %>
+  <% end %>
+<% end %>
