--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,1 +1,8 @@
 <h1>New List</h1>
+
+
+<h2>Create a new list</h2>
+<%= simple_form_for @list do |f| %>
+  <%= f.input :name, placeholder: 'Comedy' %>
+  <%= f.submit class: 'btn btn-flat' %>
+<% end %>
