--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,1 +1,11 @@
-<h1>List</h1>
+<h1>My List</h1>
+
+<h2><%= @list.name %></h2>
+<% @list.movies.each do |movie| %>
+    <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+    <%= movie.title %>
+    <%= movie.rating %>
+    <%= bookmark.comment %>
+<% end %>
+
+<%= link_to 'Bookmark', new_list_bookmark_path(@list), class: 'btn btn-flat' %>
