--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,8 +2,10 @@
 
 <%= link_to 'Create a movie list', new_list_path, class: 'btn btn-flat' %>
 
-<% @lists.each do |list| %>
+<ul>
+<li><% @lists.each do |list| %>
 <%= link_to list_path(list) do %>
   <%= list.name %>
   <% end %>
-<% end %>
+<% end %></li>
+</ul>
