--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,6 +3,6 @@
 
 <h2>Create a new list</h2>
 <%= simple_form_for @list do |f| %>
-  <%= f.input :name, placeholder: 'Comedy' %>
+  <%= f.input :name, placeholder: 'List Name' %>
   <%= f.submit class: 'btn btn-flat' %>
 <% end %>
