--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,6 +6,9 @@
     <%= movie.title %>
     <%= movie.rating %>
     <%= bookmark.comment %>
+    <%= link_to 'Delete Bookmark', bookmark_path(bookmark), method: :delete, class: 'btn btn-flat' %>
 <% end %>
 
 <%= link_to 'Bookmark', new_list_bookmark_path(@list), class: 'btn btn-flat' %>
+
+
